src/components/atoms/Modal/Modal.css
.Modal {
  display: none;
}

.Modal.-show {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 9997;
  width: 100%;
  height: 100%;
  display: -webkit-flex;
  display: flex;
  -webkit-flex-direction: column;
  flex-direction: column;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  align-items: center;
  animation: modal-fade-in-animation 0.6s ease 1 normal 0s;
}

.Modal.-closing {
  animation: modal-fade-out-animation 0.6s ease 1 normal 0s;
}

@keyframes modal-fade-in-animation {
  0% {
    display: block;
    opacity: 0;
  }

  100% {
    display: block;
    opacity: 1;
  }
}

@keyframes modal-fade-out-animation {
  0% {
    display: block;
    opacity: 1;
  }

  100% {
    display: block;
    opacity: 0;
  }
}

.Modal__overlay {
  position: fixed;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  z-index: 9998;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.6);
}

.Modal__overlay[role="button"] {
  cursor: pointer;
}

.Modal__inner {
  position: fixed;
  z-index: 9999;
  min-width: 280px;
  background-color: var(--black);
}

.Modal__closer {
  position: absolute;
  top: 8px;
  right: 8px;
  border-radius: 12px;
  width: 24px;
  height: 24px;
  text-align: center;
  line-height: 24px;
  color: var(--white);
  background-color: var(--assort-color);
  transition: background-color 0.6s ease;
}

.Modal__closer:hover {
  background-color: var(--base-color);
}

.Modal__title {
  padding: 8px;
  font-size: 18px;
  font-weight: normal;
  color: var(--white);
  background-color: var(--assort-color);
}

.Modal__contents {
  margin: 24px;
  color: var(--assort-color);
  text-align: center;
}

